fix tables variable for vertical align

--- a/app/assets/stylesheets/base/_variables.css.scss
+++ b/app/assets/stylesheets/base/_variables.css.scss
@@ -211,7 +211,7 @@ $table-cell-border:    rgba(0, 0, 0, 0.1) !default;
 $table-stripe-color:   #F0F0F0 !default;
 $table-hover-color:    #E7E7E7 !default;
 $table-border-color:   rgba(0, 0, 0, 0.1) !default;
-$table-vertical-align: middle;
+$table-vertical-align: middle !default;
 
 $table-stripe-dark-color: rgba(255, 255, 255, 0.1) !default;
 $table-hover-dark-color:  rgba(255, 255, 255, 0.2) !default;
