--- a/app/assets/stylesheets/elements/_tables.css.scss
+++ b/app/assets/stylesheets/elements/_tables.css.scss
@@ -380,9 +380,6 @@ th {
   padding: $table-cell-pad;
   line-height: $font-size-base - 1;
   border-bottom: 1px solid $table-cell-border;
-}
-
-td {
   vertical-align: $table-vertical-align;
 }
 
